# See here the documentation for this file's format:
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = pyhrv
description = Heart rate variability analysis in python.
author = Aviv Rosenberg
author-email = avivr@cs.technion.ac.il
license = GPLv3
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8; variant=GFM
url = url = https://github.com/avivrosenberg/pyhrv
project-urls =
	Documentation = https://github.com/avivrosenberg/pyhrv
# change if running only on windows, mac or linux (comma-separated)
platforms = any
# add here all kinds of additional classifiers as defined under
# https = //pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
	Development Status :: 4 - Beta
	Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
	=src
# don't change the following line! it will be updated by pyscaffold!
setup_requires = pyscaffold>=3.2a0,<3.3a0
# add here dependencies of your project (semicolon/line-separated), e.g.
install_requires =
    wfdb
    numpy
    scipy
    tqdm
    confuse
# require a specific python version, e.g. python 2.7 or > = 3.4
python_requires = >=3.7

[options.packages.find]
where = src
exclude =
	tests

[options.extras_require]
testing =
	pytest
	pytest-cov

[options.entry_points]
console_scripts =
    # pyhrv = pyhrv.main:run

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[aliases]
dists = bdist_wheel

[bdist_wheel]
# use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
# options for the devpi = PyPI server and packaging tool
# vcs export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[pyscaffold]
# pyscaffold's parameters when the project was created.
# this will be used when updating. do not change!
version = 3.2.3
package = pyhrv
extensions =
	pre_commit
	markdown

[flake8]
max-line-length = 100
ignore = E122,E123,E126,E127,E128,E731,E722
exclude = build,pyhrv/_version.py,tests,conda.recipe,.git,versioneer.py,benchmarks,.asv

[versioneer]
VCS = git
versionfile_source = src/pyhrv/_version.py
versionfile_build = src/pyhrv/_version.py
tag_prefix =
